June 10, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/plugins.c: Don't add "_" to function name for Mac OS X.
 * macosx/Info.plist: Modified software information.
 * macosx/English.lproj/InfoPlist.strings: Likewise.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Tweaked parameter.
 * macosx/English.lproj/PCSX.nib/objects.nib: Removed Edit menu.
 * macosx/English.lproj/PCSX.nib/info.nib: Likewise.

June 9, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/*: Added preliminary Mac OS X port. Code copied from PCSX Mac
   Project (Still not working).

June 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * po/zh_CN.po, po/zh_TW.po: Don't use UTF-8.
 * debian/changelog: Bumped version.

June 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/interface.c: Tweaked UI.

June 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/Makefile.am: Added config utility.
 * plugins/peopsxgl/gpucfg/callbacks.c: Added.
 * plugins/peopsxgl/gpucfg/callbacks.h: Added.
 * plugins/peopsxgl/gpucfg/interface.c: Added.
 * plugins/peopsxgl/gpucfg/interface.h: Added.
 * plugins/peopsxgl/gpucfg/main.c: Added.
 * plugins/peopsxgl/gpucfg/support.c: Added.
 * plugins/peopsxgl/gpucfg/support.h: Added.
 * plugins/peopsxgl/cfg.c: Reverted the filename of config file.
 * plugins/dfcdrom/interface.c: Supported translation.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po: Updated.

May 31, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/Config.c, plugins/dfxvideo/cfg.c: Fixed invalid memory access.
 * debian/control: Added libxxf86vm-dev to Build-Depend.
 * plugins/dfOpenGL/cfg.c: Don't use sprintf().

May 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/draw.c: Modified for compatiability with x86_64.
 * plugins/peopsxgl/draw.h: Likewise.
 * plugins/peopsxgl/externals.h: Likewise.
 * plugins/peopsxgl/fps.c: Likewise.
 * plugins/peopsxgl/fps.h: Likewise.
 * plugins/peopsxgl/gpu.c: Likewise.
 * plugins/peopsxgl/key.c: Likewise.
 * plugins/peopsxgl/menu.c: Likewise.