@@ -11,9 +11,9 @@
                 pause = id; 
                 preferences = id; 
                 reset = id; 
-                runBios = id; 
                 runCD = id; 
                 runExe = id; 
+                runIso = id; 
             }; 
             CLASS = PcsxController; 
             LANGUAGE = ObjC; 
